--- a/maven-plugins/picketlink-jdocbook-style/pom.xml
+++ b/maven-plugins/picketlink-jdocbook-style/pom.xml
@@ -10,7 +10,7 @@
 
   <groupId>org.picketlink</groupId>
   <artifactId>picketlink-jdocbook-style</artifactId>
-  <version>2.5.5.SP7</version>
+  <version>2.5.5.SP8-SNAPSHOT</version>
   <packaging>jdocbook-style</packaging>
 
   <name>PicketLink Documentation Style</name>
