--- a/modules/base/impl/pom.xml
+++ b/modules/base/impl/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.picketlink</groupId>
     <artifactId>picketlink-base-parent</artifactId>
-    <version>2.5.5.SP7</version>
+    <version>2.5.5.SP8-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
