--- a/modules/social/pom.xml
+++ b/modules/social/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <groupId>org.picketlink</groupId>
     <artifactId>picketlink-parent</artifactId>
-    <version>2.5.5.SP7</version>
+    <version>2.5.5.jdk17.1</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
 
